feat: imagem boss 1

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             user-select: none;
         }
 
+        #boss-0 {
+            background-image: url('goblim.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: transparent;
+            color: transparent;
+        }
+
         .boss-marker.draggable {
             cursor: grab;
             border-color: #ffeb3b;
