--- a/index.html
+++ b/index.html
@@ -185,6 +185,24 @@
             margin-bottom: 20px;
         }
 
+        .boss-image-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        .boss-image {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            border: 4px solid rgba(255, 255, 255, 0.9);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: linear-gradient(45deg, #ff4757, #c44569);
+        }
+
         .boss-name {
             font-size: 24px;
             font-weight: bold;
@@ -533,6 +551,9 @@
         <div class="battle-modal" id="battleModal">
             <div class="battle-screen">
                 <div class="boss-info">
+                    <div class="boss-image-container" id="bossImageContainer">
+                        <div class="boss-image" id="bossImage"></div>
+                    </div>
                     <div class="boss-name" id="bossName">Boss 1</div>
                     <div class="health-bar-container">
                         <div class="health-bar" id="healthBar">
@@ -1260,6 +1281,25 @@
             boss.currentHealth = boss.maxHealth; // Reset boss health
 
             document.getElementById('bossName').textContent = boss.name;
+            
+            // Definir imagem do boss
+            const bossImage = document.getElementById('bossImage');
+            if (bossIndex === 0) {
+                // Primeiro boss usa a imagem do goblim
+                bossImage.style.backgroundImage = "url('goblim.png')";
+            } else {
+                // Outros bosses usam o gradiente padrão com número
+                bossImage.style.backgroundImage = 'none';
+                bossImage.style.background = 'linear-gradient(45deg, #ff4757, #c44569)';
+                bossImage.style.color = 'white';
+                bossImage.style.display = 'flex';
+                bossImage.style.alignItems = 'center';
+                bossImage.style.justifyContent = 'center';
+                bossImage.style.fontWeight = 'bold';
+                bossImage.style.fontSize = '24px';
+                bossImage.textContent = bossIndex + 1;
+            }
+            
             updateHealthBar();
             updateAttemptsDisplay();
 
