feat: muda texto

--- a/v2/index.html
+++ b/v2/index.html
@@ -893,7 +893,7 @@
         <div class="external-controls">
             <div class="controls-left">
                 <div class="control-info">
-                    <div onclick="editPlayerName()" style="cursor: pointer;">Jogador: <span id="playerName">Akira</span> ✏️</div>
+                    <div onclick="editPlayerName()" style="cursor: pointer;">Herói: <span id="playerName">Akira</span> ✏️</div>
                     <div>Boss Atual: <span id="currentBoss">1</span>/10</div>
                     <div>Posição: <span id="playerPosition">Início</span></div>
                 </div>
